Fixed navbar gap issue

--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -3,7 +3,7 @@
     margin:2px;
     width: 12px;
     background-color: #6DB5E5;
-    border: solid black 0.5px
+    border: solid black 1px
 }
 
 
@@ -27,6 +27,9 @@
 .navbar {
     height: 8vh;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .nav-btn {
@@ -36,7 +39,8 @@
     background-color: transparent;
     color:black;
     padding: 0.5em;
-    margin: 1.5vw;
+    margin-right: 1.5vw;
+    margin-left: 1.5vw;
     border: none;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1.5px 5px 0 rgba(0, 0, 0, 0.19);
 }
